--- a/Proyecto-Catedra-DAW/css/productos.css
+++ b/Proyecto-Catedra-DAW/css/productos.css
@@ -1,7 +1,7 @@
 /*Diseño aquí, porque intrusivo es el diablo*/
 
 .menu {
-    position: absolute;
+    position: fixed;
     top: 20px;
     left: 0;
     right: 0;
@@ -15,7 +15,7 @@
 }
 
 .menu-1 {
-    background-color: rgb(116, 116, 116);
+    background-color: rgb(0, 0, 0);
     margin-right: 100px;
     width: 600px;
     height: 50px;
@@ -26,42 +26,32 @@
 
 .logo-1 {
     margin-right: 40px;
-    width: 50px;
+    width: 60px;
     height: 50px;
+    border-radius: 20px;
 }
 
 .menu .navbar ul li {
     position: relative;
     float: left;
+    margin-top: 15px;
 }
 
 .menu .navbar ul li a {
-    font-size: 18px;
+    font-size: 16px;
     padding: 30px;
-    color: rgb(130, 27, 226);
+    color: rgb(255, 255, 255);
     display: block;
+    text-decoration: none;
 }
 
 .menu .navbar ul li a:hover {
-    color: rgb(0, 150, 209);
-}
-
-#menu {
-    display: none;
-}
-
-.menu-icono {
-    width: 25px;
-}
-
-.menu label {
-    cursor: pointer;
-    display: none;
+    color: rgb(151, 152, 153);
 }
 
 .btn-1 {
-    background-color: rgb(116, 116, 116);
-    color: rgb(130, 27, 226);
+    background-color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
     font-size: 18px;
     border-radius: 40px;
     border: none;
@@ -70,10 +60,11 @@
 }
 
 .btn-1:hover {
-    color: rgb(0, 150, 209);
+    color: rgb(151, 152, 153);
 }
 
 #menu {
+    position: fixed;
     display: none;
 }
 
@@ -82,6 +73,7 @@
 }
 
 .menu label {
+    position: fixed;
     cursor: pointer;
     display: none;
 }
@@ -91,16 +83,49 @@
     padding-bottom: 50px;
 }
 
-body {
-    background-color: #fff;
-}
-
-
 #list {
-    background-color: rgba(182, 182, 182, 0.7);
+    background-color: rgb(244, 246, 248);
     padding: 10px;
 }
 
 #selectBusqueda {
     display: none;
 }
+
+body {
+    background-color: rgb(244, 246, 248);
+}
+.row {
+    margin-top: 110px;
+}
+
+
+footer {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    text-align: center;
+    padding: 10px 0;
+    background-color: #000000;
+    color:#fff;
+}
+
+.btn-2 {
+    background-color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
+    font-size: 18px;
+    border-radius: 40px;
+    border: none;
+    width: 150px;
+    height: 45px;
+    float: right;
+}
+
+.btn-2:hover {
+    color: rgb(151, 152, 153);
+}
+
+
+
+
+//Pipio
